Enhance getAttendance to include monthly overview
Added monthly attendance overview to the response.